# opflow

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  agg_model.cpp  dag_realistic_benchmark.cpp  flat_set_benchmark.cpp  graph_bench.cpp  inlined_trait.cpp  pipeline_bench.cpp  rolling_min.cpp  s2_exp_weighted_benchmark.cpp  s2_exp_weighted_sta.hpp  s2_simple_test.cpp  trait_vs_vtbl.cpp
docs/: dependency_map.md  engine_architecture.md  graph.md  ordered_topo.md  pipeline.md
examples/: CMakeLists.txt  dependency_map_example.cpp  engine_builder_example.cpp  engine_integration_test.cpp  flat_graph_example.cpp  graph_examples.cpp
include/opflow/: agg_base.hpp  agg_exec.hpp  aggregation.hpp  chrono.hpp  cloneable.hpp  common.hpp  def.hpp  dependency_map.hpp  flat_graph.hpp  fn_base.hpp  fn_dag_exec.hpp  fn_exec.hpp  graph.hpp  graph_agg.hpp  graph_exec.hpp  graph_named.hpp  graph_node.hpp  graph_node_named.hpp  graph_topo.hpp  graph_topo_fanout.hpp  history.hpp  history_deque.hpp  history_ringbuf.hpp  input.hpp  lcao.hpp  op.hpp  op_base.hpp  op_dag_exec.hpp  op_dag_exec_fanout.hpp  op_exec.hpp  pipeline.hpp  topo.hpp  topo_graph.hpp  transform.hpp  transform_base.hpp  tumble_base.hpp  tumble_exec.hpp  undef.hpp  win_base.hpp  window.hpp  (+1 more)
include/opflow/agg/: avg.hpp  book_imba.hpp  count.hpp  ohlc.hpp  order_flow.hpp  return.hpp  sum.hpp  var.hpp  vwap.hpp
include/opflow/chrono/: chrono.hpp
include/opflow/detail/: accum.hpp  agg_store.hpp  aligned_allocator.hpp  callable_trait.hpp  column_store.hpp  dag_store.hpp  finally.hpp  fixed_buffer_resource.hpp  flat_multivect.hpp  flat_set.hpp  graph_store.hpp  history_buffer.hpp  history_deque.hpp  history_ringbuf.hpp  iterator.hpp  ringbuf_vect.hpp  sorted_vect.hpp  sync_point.hpp  utils.hpp  utils_math.hpp  vector_store.hpp
include/opflow/fn/: avg.hpp  book_imba.hpp  count.hpp  functor.hpp  math.hpp  ohlc.hpp  order_flow.hpp  return.hpp  root.hpp  sum.hpp
include/opflow/impl/: flat_multivect.hpp  flat_set.hpp  iterator.hpp  ringbuf_vect.hpp  sorted_vect.hpp  step_view.hpp
include/opflow/op/: avg.hpp  beta.hpp  corr.hpp  cov.hpp  cov_ew.hpp  delta.hpp  dynwin_avg.hpp  ema.hpp  ewma.hpp  functor.hpp  input.hpp  lag.hpp  m2.hpp  macd.hpp  math.hpp  minmax.hpp  ohlc.hpp  root.hpp  rsi.hpp  sum.hpp  ti.hpp  trace.hpp  var.hpp  var_ew.hpp  var_vw.hpp  zscore.hpp
include/opflow/op/detail/: accum.hpp  binary.hpp  static_win.hpp  ternary.hpp  unary.hpp
include/opflow/trans/: lag.hpp
include/opflow/tumble/: counter.hpp  cusum.hpp  session.hpp  time.hpp
include/opflow/win/: counter.hpp  cusum_filter.hpp  session.hpp  tumbling.hpp
private/dev/: utils.hpp
src/: _clangd_tu.cpp
test/: CMakeLists.txt  agg_exec_test.cpp  aggregator_pipeline_test.cpp  chrono_test.cpp  column_store_test.cpp  dag_store_test.cpp  dependency_map_test.cpp  engine_test.cpp  flat_graph_test.cpp  flat_multivect_pmr_test.cpp  flat_multivect_test.cpp  flat_set_corner_cases_test.cpp  flat_set_edge_cases_test.cpp  flat_set_test.cpp  functor_test.cpp  graph_exec_test.cpp  graph_named_test.cpp  graph_node_named_test.cpp  graph_node_test.cpp  graph_test.cpp  graph_topo_fanout_test.cpp  graph_topo_test.cpp  history_buffer_test.cpp  history_comparison_test.cpp  history_deque_test.cpp  history_ringbuf_test.cpp  history_test.cpp  iterator_test.cpp  main.cpp  ohlc_test.cpp  op_dag_exec_test.cpp  op_ewma_test.cpp  op_exec_test.cpp  pipeline_comprehensive_test.cpp  pipeline_test.cpp  ringbuf_vect_test.cpp  sorted_graph_test.cpp  sorted_vect_test.cpp  topo_bfs_test.cpp  topo_graph_test.cpp  (+4 more)
