add_executable(graph_examples graph_examples.cpp)
target_link_libraries(graph_examples opflow::headers)

add_executable(dependency_map_example dependency_map_example.cpp)
target_link_libraries(dependency_map_example opflow::headers)

add_executable(engine_integration_test engine_integration_test.cpp)
target_link_libraries(engine_integration_test opflow::headers)
